added `GET /v1/content/{digest}` for getting the content sources instead of using the get package record status endpoint; added endpoint to get ledger records;
