# crates/server/src/datastore/memory.rs
@@ -121,6 +121,24 @@ impl DataStore for MemoryDataStore {
         Ok(Box::pin(futures::stream::empty()))
     }
 
+    async fn get_log_leafs_starting_with_registry_index(
+        &self,
+        starting_index: RegistryIndex,
+        limit: usize,
+    ) -> Result<Vec<(RegistryIndex, LogLeaf)>, DataStoreError> {
+        let state = self.0.read().await;
+
+        let mut leafs = Vec::with_capacity(limit);
+        for entry in starting_index..starting_index + limit {
+            match state.log_leafs.get(&entry) {
+                Some(log_leaf) => leafs.push((entry, log_leaf.clone())),
+                None => break,
+            }
+        }
+
+        Ok(leafs)
+    }
+
     async fn get_log_leafs_with_registry_index(
         &self,
         entries: &[RegistryIndex],
